fixed: content doesn't get covered by footer anymore

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,11 +44,11 @@ body {
   box-sizing: border-box;
   color: $medium_grey;
   background: $dark_grey;
-  font-size: 16px;
+  font-size: 18px;
   font-family: 'Myriad Pro', 'Calibri', Helvetica, monospace, sans-serif;
   line-height: 1.5;
   text-align: justify;
-  margin-bottom: 84px;
+  margin-bottom: 168px;
 }
 
 h1, h2, h3, h4, h5, h6 {
